--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                         <ul class="categories-items">
                             <li>
                                 <input type="checkbox" value="ბიზნესი" name="ბიზნესი" class="checkbox">
-                                <label for="business">ბიზნესი</label>
+                                <label for="2">ბიზნესი</label>
                             </li>
                             <li>
                                 <input type="checkbox" value="უძრავი ქონება" name="უძრავი ქონება" id="property" class="checkbox">
-                                <label for="property">უძრავი ქონება</label>
+                                <label for="1">უძრავი ქონება</label>
                             </li>
                             <li>
                                 <input type="checkbox" value="ავტო" name="ავტო" id="auto" class="checkbox">
@@ -147,7 +147,7 @@
                             </li>
                             <li>
                                 <input type="checkbox" value="მედია" name="მედია" id="media" class="checkbox">
-                                <label for="media">მედია</label>
+                                <label for="3">მედია</label>
                             </li>
                             <li>
                                 <input type="checkbox" value="განათლება" name="განათლება" id="education" class="checkbox">
